# scholar-assistant-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISION_MATRIX.md  DIAGNOSIS.md  Dockerfile  LICENSE  MIGRATION_V2_COMPLETE.md  PLAN_NEW_FEATURES.md  PROJECT_REPORT.md  README.md  README_zh.md  REVIEW_CURRENT.md  SECURITY.md  STRATEGY.md  _add_syntax_aware.py  _fix_ollama_helpers.py  article.md  docker-compose.yml  index.html  main.py  package-lock.json  package.json  requirements.txt  start_dev.bat  test_attention_v1.md  test_attention_v2.md  test_attention_v3.md  test_attention_v4.md  test_output.md  test_output_v2.md  test_output_v3.md  test_output_v4.md  test_output_v5.md  test_output_v6.md  test_output_v7.md  tsconfig.json  (+2 more)
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/python/: api.py  api_cloud.py  api_factory.py  requirements.txt
src-tauri/python/config/: default.yaml  docker.yaml
src-tauri/python/src/: __init__.py
src-tauri/python/src/agent/: context_compressor.py  mcp_server.py  prompt_builder.py  review_agent.py  tool_generator.py  tools.py  trajectory.py
src-tauri/python/src/argument/: __init__.py  feedback_generator.py  flatten.py  logic_checker.py  observer.py  store.py
src-tauri/python/src/chunker/: splitter.py  syntax_splitter.py
src-tauri/python/src/formatter/: renderer.py  (+1 more)
src-tauri/resources/pandoc/: MANUAL.html
src-tauri/src/: main.rs
src-tauri/tests/: integration_test.rs
(+668 files in other folders)
