[package]
name = "scholar-translate"
version = "0.3.1"
edition = "2021"

[dependencies]
tauri = { version = "=2.5.1", features = ["protocol-asset"] }
tauri-plugin-shell = "=2.2.1"
tauri-plugin-dialog = "=2.2.0"
tauri-plugin-fs = "=2.2.0"
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"
tauri-plugin-single-instance = "=2.4.0"

[build-dependencies]
tauri-build = { version = "=2.0.3", features = [] }
