[package]
name = "scholar-translate"
version = "0.3.2"
edition = "2021"

[dependencies]
tauri = { version = "=2.11.1", features = ["protocol-asset"] }
tauri-plugin-shell = "=2.3.5"
tauri-plugin-dialog = "=2.7.1"
tauri-plugin-fs = "=2.5.1"
serde = { version = "=1.0.225", features = ["derive"] }
serde_json = "=1.0.140"
tauri-plugin-single-instance = "=2.4.2"

[build-dependencies]
tauri-build = { version = "=2.6.1", features = [] }
